--- a/design/css/global.css
+++ b/design/css/global.css
@@ -822,14 +822,14 @@ input[type=text].ui-textfield, input[type=password].ui-textfield, input[type=fil
 }
 
 input[type=checkbox].ui-textfield {
-  width: 20px;
-  height: 20px;
+  width: 1.8181818181818em;
+  height: 1.8181818181818em;
   background-image: none;
 }
 
 input[type=text].coordinate {
   max-width: 3em;
-  padding: 4px;
+  padding: 0.363636363636em;
 }
 
 /*
