NEWS-feat-40a4.13: Now test of long news (more then 1 paragraph) hidden under 'Show news text' button. Else add 'sn://' BBCode

--- a/design/templates/OpenGame/announce.tpl.html
+++ b/design/templates/OpenGame/announce.tpl.html
@@ -64,5 +64,6 @@
       <th><img src="design/images/r1.png"></th>
     <!-- ENDIF -->
   </tr>
+  <!-- DEFINE $NEWS_FULL = true -->
   <!-- INCLUDE news_list -->
 </table>
