--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1061,3 +1061,7 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 .batch_unit_holder > input {
   float: left;
 }
+
+.news_hide {
+  display: none;
+}
