ADM-misc-40a6.3: On log view page added link to delete records about engeine and stat updates

--- a/design/templates/OpenGame/admin/adm_log_main.tpl.html
+++ b/design/templates/OpenGame/admin/adm_log_main.tpl.html
@@ -1,4 +1,5 @@
 <h2>{L_adm_er_ttle}</h2>
+<a class="link" href="admin/adm_log_main.php?delete_update_info=1">{L_adm_log_delete_update_info}</a><br /><br />
 
 <table width="600px">
   <tr class="c_l">
