--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -66,7 +66,7 @@
           <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
           <!-- INCLUDE eco_queue -->
           <div style="display: inline-block; position: relative; width: 11.63636363636em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
-            <a href="buildings.php?mode=research">
+            <a href="buildings.php?mode={D_QUE_RESEARCH}">
               <img style="position: absolute; left: 0; top: 0;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_standard.png" height="100%" alt="{L_Research}" title="{L_Research}">
               <!-- IF $QUE_NOT_EMPTY -->
               <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
