GAME-feat-40a8.0: Support for game_skirmish module

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -800,7 +800,7 @@ th.c_j, td.c_j
   line-height: 1em;
 }
 
-#unit_require li {
+#unit_require li, #unit_grants li {
   margin: 0;
   padding: 0;
 }
