--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -18,6 +18,7 @@
 <script type="text/javascript">
 var production = Array();
 var require = Array();
+var grants = Array();
 var unit_selected = null;
 var eco_bld_style_probe;
 var STACKABLE = '{STACKABLE}';
@@ -105,6 +106,22 @@ planet = {
       id: parseInt('{require.ID}'),
     },
     <!-- END require -->
+  ];
+  <!-- ENDIF -->
+
+  <!-- IF .production.grants -->
+  grants[{production.ID}] = [
+    <!-- BEGIN grants -->
+    {
+      name: '{grants.NAME}',
+      requerements_met: parseInt('{grants.REQUEREMENTS_MET}'),
+      level_require: parseInt('{grants.LEVEL_REQUIRE}'),
+      level: parseInt('{grants.LEVEL}'),
+      level_basic: parseInt('{grants.LEVEL_BASIC}'),
+      level_bonus: parseInt('{grants.LEVEL_BONUS}'),
+      id: parseInt('{grants.ID}'),
+    },
+    <!-- END grants -->
   ];
   <!-- ENDIF -->
 
@@ -248,6 +265,10 @@ planet = {
                   <div id="unit_require_wrapper">
                     <div class="c_l neutral" style="text-align: left;">{L_wiki_requrements}</div>
                     <ul id="unit_require"></ul>
+                  </div>
+                  <div id="unit_grants_wrapper">
+                    <div class="c_l neutral" style="text-align: left;">{L_wiki_grants}</div>
+                    <ul id="unit_grants"></ul>
                   </div>
                 </div>
               </div>
