ADM-feat-40a8.4: On server settings page there are settings for planet storage size and starting planet resources

--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -180,6 +180,24 @@
       <th><input name="initial_fields" maxlength="80" size="10" value="{C_initial_fields}" type="text"> {L_adm_opt_sectors}</th>
     </tr>
     <tr>
+      <th>{L_res_basic_starting_resources}</th>
+      <th>
+        <table class="markup">
+          <tr>
+            <td>{L_sys_metal}</td>
+            <td><input name="eco_planet_starting_metal" maxlength="10" size="9" value="{C_eco_planet_starting_metal}" type="text"></td>
+            <td>{L_sys_crystal}</td>
+            <td><input name="eco_planet_starting_crystal" maxlength="10" size="9" value="{C_eco_planet_starting_crystal}" type="text"></td>
+          </tr>
+          <tr>
+            <td>{L_sys_deuterium}</td>
+            <td><input name="eco_planet_starting_deuterium" maxlength="10" size="9" value="{C_eco_planet_starting_deuterium}" type="text"></td>
+            <td colspan="2">&nbsp;</td>
+          </tr>
+        </table>
+      </th>
+    </tr>
+    <tr>
       <th>{L_res_basic_income}</th>
       <th>
         <table class="markup">
@@ -206,6 +224,24 @@
         <div class="fl" style="width: 5.5em;">{L_sys_energy}</div>
         <div><input name="energy_basic_income" maxlength="10" size="9" value="{C_energy_basic_income}" type="text"> {L_adm_opt_per_hour}</div>
         -->
+      </th>
+    </tr>
+    <tr>
+      <th>{L_res_basic_storage_size}</th>
+      <th>
+        <table class="markup">
+          <tr>
+            <td>{L_sys_metal}</td>
+            <td><input name="eco_planet_storage_metal" maxlength="10" size="9" value="{C_eco_planet_storage_metal}" type="text"></td>
+            <td>{L_sys_crystal}</td>
+            <td><input name="eco_planet_storage_crystal" maxlength="10" size="9" value="{C_eco_planet_storage_crystal}" type="text"></td>
+          </tr>
+          <tr>
+            <td>{L_sys_deuterium}</td>
+            <td><input name="eco_planet_storage_deuterium" maxlength="10" size="9" value="{C_eco_planet_storage_deuterium}" type="text"></td>
+            <td colspan="2">&nbsp;</td>
+          </tr>
+        </table>
       </th>
     </tr>
 
