GAME-int-40a8.6: In skirmish mode research icon now hidden from navbar as well as ques of structures and defense on Planet Overview page

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -61,6 +61,7 @@
     <td class="c_l noborder">
       <table width="100%" cellspacing="0" cellpadding="0"><tr>
         <!-- BOF Nav Bar Left block -->
+        <!-- IF ! GAME_RESEARCH_DISABLED -->
         <td class="c_l noborder" height="5.818181818182em">
 
           <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
@@ -83,8 +84,8 @@
               <!-- ENDIF -->
             </a>
           </div>
-
         </td>
+        <!-- ENDIF -->
         <!-- EOF Nav Bar Left block -->
 
         <!-- BOF Nav Bar Middle block -->
