INT-feat-40a8.8: Added Planet and Hangar buttons to navbar. Also Planets, Hangar and Quests buttons now can be disabled

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -266,6 +266,37 @@
           </th>
         </tr>
 
+        <tr>
+          <th class="c_c" colspan="2">{L_PLAYER_OPTION_NAVBAR}</th>
+        </tr>
+        <tr>
+          <td class="c_c">
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_PLANET">{L_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}</label>
+          </td>
+          <td class="c_c">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_PLANET}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_PLANET" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_PLANET -->checked="checked" <!-- ENDIF -->/>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_c">
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_HANGAR">{L_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}</label>
+          </td>
+          <td class="c_c">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_HANGAR}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_HANGAR" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_HANGAR -->checked="checked" <!-- ENDIF -->/>
+          </td>
+        </tr>
+        <tr>
+          <td class="c_c">
+            <label for="PLAYER_OPTION_NAVBAR_DISABLE_QUESTS">{L_PLAYER_OPTION_NAVBAR_DISABLE_QUESTS}</label>
+          </td>
+          <td class="c_c">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_QUESTS}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_QUESTS}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_QUESTS" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_QUESTS -->checked="checked" <!-- ENDIF -->/>
+          </td>
+        </tr>
+
         <!-- IF .options_2 -->
         <tr>
           <th class="c_c" colspan="2">{L_galaxyvision_options}</th>
