--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -61,9 +61,8 @@
     <td class="c_l noborder">
       <table width="100%" cellspacing="0" cellpadding="0"><tr>
         <!-- BOF Nav Bar Left block -->
-        <!-- IF ! GAME_RESEARCH_DISABLED -->
         <td class="c_l noborder" height="5.818181818182em">
-
+        <!-- IF ! GAME_RESEARCH_DISABLED -->
           <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
           <!-- INCLUDE eco_queue -->
           <div style="display: inline-block; position: relative; width: 11.63636363636em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
@@ -84,8 +83,44 @@
               <!-- ENDIF -->
             </a>
           </div>
-        </td>
         <!-- ENDIF -->
+
+        <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_PLANET -->
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
+            <a href="overview.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{TOPNAV_CURRENT_PLANET_IMAGE}" height="100%" alt="{TOPNAV_CURRENT_PLANET_NAME}" title="{TOPNAV_CURRENT_PLANET_NAME}">
+              <span style="position: absolute; right: 0; bottom: 0;" id="topnav_colonies_counter_total" class="icon_alpha">
+                <span id='topnav_colonies_counter'>{TOPNAV_COLONIES_CURRENT}</span>/{TOPNAV_COLONIES_MAX}
+              </span>
+            </a>
+          </div>
+        <!-- ENDIF -->
+
+        <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_HANGAR && ! GAME_HANGAR_DISABLED -->
+          <!-- DEFINE $QUE_ID = '{SUBQUE_FLEET}' -->
+          <!-- INCLUDE eco_queue -->
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
+            <a href="buildings.php?mode={D_SUBQUE_FLEET}">
+              <img style="position: absolute; left: 0; top: 0;" src="{D_SN_ROOT_RELATIVE}design/images/build_hangar.png" height="100%" alt="{L_Shipyard}" title="{L_Shipyard}">
+              <!-- IF $QUE_NOT_EMPTY -->
+                <span class="alpha50" style="position: absolute; width: 100%; height: 100%;left: 0; top: 0; vertical-align: middle; display: flex; align-items: center; justify-content: center;" >
+                  <div>
+                    <div id="topnav_{$QUE_ID}"></div>
+                    <div id="topnav_{$QUE_ID}_timer" style="color: lime"></div>
+                    <div>{L_sys_total_time_short}</div>
+                    <div id="topnav_{$QUE_ID}_total" style="color: red"></div>
+                    <div style="display: none;" id="topnav_{$QUE_ID}_que"></div>
+                  </div>
+                </span>
+              <!-- ELSE -->
+                <span style="width: 100%; position: absolute; left: 0; top: 40%;" class="alpha50">
+                  {L_eco_que_empty}
+                </span>
+              <!-- ENDIF -->
+            </a>
+          </div>
+        <!-- ENDIF -->
+        </td>
         <!-- EOF Nav Bar Left block -->
 
         <!-- BOF Nav Bar Middle block -->
@@ -109,6 +144,7 @@
             </a>
           </div>
 
+          <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_QUESTS && ! GAME_QUESTS_DISABLED -->
           <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="quest.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_quest_standard.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
@@ -117,6 +153,7 @@
               </span>
             </a>
           </div>
+          <!-- ENDIF -->
 
           <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="messages.php">
